set up article class / form body

--- a/index.html
+++ b/index.html
@@ -10,9 +10,115 @@
     <link rel="stylesheet" href="/css/default.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/responsive.css">
+
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <!--header-->
+    <header>
+
+    </header>
+
+    <!--article/form-->
+    <article>
+        <label for="name">&#xf406;</label>
+        <!--input type "text"-->
+        <input id="name" name="Name" type="text" placeholder="Name">
+        <br>
+        <br>
+        <!--label "telephone"-->
+        <label for="phone">&#xf095;</label>
+        <!--input type "tel"-->
+        <input id="phone" type="tel" placeholder="Phone Number" maxlength="10">
+        <select aria-label="phonetype">
+            <option value="label">Label</option>
+            <option value="cell">Mobile</option>
+            <option value="home">Home</option>
+            <option value="work">Work</option>
+        </select>
+        <br>
+        <br>
+        <!--label, address-->
+        <label for="address">&#xf3c5;</label>
+        <input type="text" id="address" placeholder="Address">
+        <br>
+        <br>
+        <label for="city"></label>
+        <input type="text" id="city" placeholder="City">
+        <br>
+        <br>
+        <label for="state-choice"></label>
+        <select aria-label="state-choice">
+            <option value="state">State</option>
+            <option value="AK">AK</option>
+            <option value="AL">AL</option>
+            <option value="AR">AR</option>
+            <option value="AZ">AZ</option>
+            <option value="CA">CA</option>
+            <option value="CO">CO</option>
+            <option value="CT">CT</option>
+            <option value="DC">DC</option>
+            <option value="DE">DE</option>
+            <option value="FL">FL</option>
+            <option value="GA">GA</option>
+            <option value="HI">HI</option>
+            <option value="IA">IA</option>
+            <option value="ID">ID</option>
+            <option value="IL">IL</option>
+            <option value="IN">IN</option>
+            <option value="KS">KS</option>
+            <option value="KY">KY</option>
+            <option value="LA">LA</option>
+            <option value="MA">MA</option>
+            <option value="MD">MD</option>
+            <option value="ME">ME</option>
+            <option value="MI">MI</option>
+            <option value="MN">MN</option>
+            <option value="MO">MO</option>
+            <option value="MS">MS</option>
+            <option value="MT">MT</option>
+            <option value="NC">NC</option>
+            <option value="ND">ND</option>
+            <option value="NE">NE</option>
+            <option value="NH">NH</option>
+            <option value="NJ">NJ</option>
+            <option value="NM">NM</option>
+            <option value="NV">NV</option>
+            <option value="NY">NY</option>
+            <option value="OH">OH</option>
+            <option value="OK">OK</option>
+            <option value="OR">OR</option>
+            <option value="PA">PA</option>
+            <option value="RI">RI</option>
+            <option value="SC">SC</option>
+            <option value="SD">SD</option>
+            <option value="TN">TN</option>
+            <option value="TX">TX</option>
+            <option value="UT">UT</option>
+            <option value="VA">VA</option>
+            <option value="VT">VT</option>
+            <option value="WA">WA</option>
+            <option value="WI">WI</option>
+            <option value="WV">WV</option>
+            <option value="WY">WY</option>
+        </select>
+        <!--zip-->
+        <label for="zip"></label>
+        <input type="number" placeholder="Zip" >
+        <br>
+        <br>
+        <!--email-->
+        <label for="email">
+            <i class="fas">&#xf0e0;</i>
+        </label>
+        <input type="email" placeholder="Email">
+        <br>
+        <br>
+        <label for="birthday">
+            <i class='fas'>&#xf1fd;</i>
+        </label>
+        <input type="date">
+    </article>
 </body>
 </html>
