--- a/index.html
+++ b/index.html
@@ -12,23 +12,32 @@
     <link rel="stylesheet" href="/css/responsive.css">
 
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
     <!--header-->
     <header>
-
+        <i class="fas">&#xf0c9;</i>
+        <h2>Contacts</h2>
+        <i class="fas">&#xf002;</i>
+        <span class="glyphicon">&#xe235;</span>
     </header>
 
     <!--article/form-->
     <article>
-        <label for="name">&#xf406;</label>
+        <label for="name">
+            <i class="fas">&#xf406;</i>
+        </label>
         <!--input type "text"-->
         <input id="name" name="Name" type="text" placeholder="Name">
         <br>
         <br>
         <!--label "telephone"-->
-        <label for="phone">&#xf095;</label>
+        <label for="phone">
+            <i class="fa">&#xf095;</i>
+        </label>
         <!--input type "tel"-->
         <input id="phone" type="tel" placeholder="Phone Number" maxlength="10">
         <select aria-label="phonetype">
@@ -40,7 +49,9 @@
         <br>
         <br>
         <!--label, address-->
-        <label for="address">&#xf3c5;</label>
+        <label for="address">
+            <i class="fas">&#xf3c5;</i>
+        </label>
         <input type="text" id="address" placeholder="Address">
         <br>
         <br>
